Fixed alignment issue in sales lead page on mobile phones

--- a/components/common/footer_section/footer_section_styles.module.scss
+++ b/components/common/footer_section/footer_section_styles.module.scss
@@ -4,9 +4,11 @@
 .footer {
     .locations_area {
         margin-top: 128px;
-
-        @include within_breakpoint($small_breakpoint) {
+        padding: 32px;
+        
+        @include within_breakpoint($extra_small_breakpoint) {
             margin-top: 64px;
+            padding: 16px;
         }
 
         .container {
@@ -21,37 +23,7 @@
             @include within_breakpoint($extra_small_breakpoint) {
                 // display: none;
                 grid-template-columns: 1fr;
-            }
-
-            .location_container {
-                display: flex;
-
-                @include within_breakpoint($small_breakpoint) {
-                    justify-content: center;
-                }
-
-                .icon_container {
-                    width: 32px;
-                    height: 32px;
-                    border-radius: 3000px;
-                    background-color: $primary_color_variant;
-                    padding: 8px;
-
-                    .icon {
-                        width: 100%;
-                        height: 100%;
-                    }
-                }
-
-                .address {
-                    text-align: justify;
-                    margin-left: 16px;
-
-                    @include within_breakpoint($extra_small_breakpoint) {
-                        width: 300px;
-                    }
-                }
-            }
+            }            
         }
     }
 
