--- a/components/sales_lead_page/sales_lead_section/get_a_quote_form/get_a_quote_form_styles.module.scss
+++ b/components/sales_lead_page/sales_lead_section/get_a_quote_form/get_a_quote_form_styles.module.scss
@@ -1,8 +1,14 @@
+@import "../../../../styles/breakpoints.scss";
+
 .get_a_quote_form {
     display: inline-flex;
     box-shadow: 2px 2px 3px #00000055;
     padding: 32px;
     flex-direction: column;
+
+    @include within_breakpoint($extra_small_breakpoint) {
+        padding: 16px;
+    }
     
     label {
         margin-bottom: 8px;
