--- a/components/sales_lead_page/sales_lead_section/sales_lead_section_styles.module.scss
+++ b/components/sales_lead_page/sales_lead_section/sales_lead_section_styles.module.scss
@@ -79,6 +79,10 @@
         flex-direction: column;
         align-items: center;
 
+        @include within_breakpoint($extra_small_breakpoint) {
+            padding: 16px;
+        }
+
         .get_a_quote_form {
             max-width: 50%;
 
